--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <p id="demo"></p>
 
-  <script>
+  <!-- <script>
     let arr = ['Apple', { name: 'John' }, true, function () { alert('hello'); }];
     alert(arr[1].name); // John
     arr[3](); // hello
-  </script>
+  </script> -->
 </body>
 
 </html>
