--- a/index.html
+++ b/index.html
@@ -5,16 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-  <p id="demo"></p>
+  <header id="main-header" class="bg-success text-white p-4 mb-3">
+    <div class="container">
+      <h1 id="header-title">Item Lister</h1>
+    </div>
+  </header>
+  <div class="container">
+    <div id="main" class="card body">
+      <h2 class="title">Add item</h2>
+      <form class="form-inline mb-3">
+        <input type="text" class="form-control mr-2">
+        <input type="submit" class="btn btn-dark" value="submit">
+      </form>
+      <h2>Items</h2>
+      <ul id="items" class="list-group">
+        <li class="list-group-item">Item 1</li>
+        <li class="list-group-item">Item 1</li>
+        <li class="list-group-item">Item 1</li>
+        <li class="list-group-item">Item 1</li>
+      </ul>
+    </div>
+  </div>
 
-  <!-- <script>
-    let arr = ['Apple', { name: 'John' }, true, function () { alert('hello'); }];
-    alert(arr[1].name); // John
-    arr[3](); // hello
-  </script> -->
+
+  
+  <script src="dom.js"></script>
 </body>
 
 </html>
