--- a/event.html
+++ b/event.html
@@ -26,19 +26,22 @@
       </form>
       <h2>Items</h2>
       <ul id="items" class="list-group">
-        <li class="list-group-item">Item 1</li>
-        <li class="list-group-item">Item 2</li>
-        <li class="list-group-item">Item 3</li>
-        <li class="list-group-item">Item 4</li>
+        <li class="list-group-item d-flex justify-content-between"><p>Item 1</p><button class="btn btn-danger">X</button></li>
+        <li class="list-group-item d-flex justify-content-between"><p>Item 2</p><button class="btn btn-danger">X</button></li>
+        <li class="list-group-item d-flex justify-content-between"><p>Item 3</p><button class="btn btn-danger">X</button></li>
+        <li class="list-group-item d-flex justify-content-between"><p>Item 4</p><button class="btn btn-danger">X</button></li>
       </ul>
-      <h2>SAlom</h2>
+      <h2 id="output">SAlom</h2>
       <button class="btn btn-dark" id="button">Click me</button>
+      <div id="box" style="width: 400px; height: 200px; background: #f4f4f4;">
+        <h3>Hello</h3>
+      </div>
     </div>
   </div>
   <div id="box"></div>
 
   
-  <script src="dom.js"></script>
+  <script src="evntlar.js"></script>
 </body>
 
 </html>
